# ray-tracing

./: .gitmodules  CMakeLists.txt  LayoutElement.cpp  LayoutElement.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h  main.cpp
resources/shaders/: default.glsl
